--- a/practicum/week-4/question1.html
+++ b/practicum/week-4/question1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="practicum\week-4\styles.css" type="text/html">
     <title>Document</title>
 </head>
 <body>
@@ -34,8 +35,8 @@
        }
        let daffodil = new Flower('Daffodil', 'daffodil.png');
        let cherryblossom = new Flower('Cherry blossom', 'cherryblossom.png');
-       let lily = new Flower('Lily', 'lily.png');
-       let daisy = new Flower('Daisy', 'daisy.png');
+       let lily = new Flower('Lily', 'lily.jpg');
+       let daisy = new Flower('Daisy', 'daisy.jpg');
        let sunflower = new Flower('Sunflower', 'sunflower.png');
        let tulip = new Flower('Tulip', 'tulip.png');
        let rose = new Flower('Rose', 'rose.png');
@@ -51,6 +52,31 @@
              rose,
              waterlily
        ];
+       NUM_ROWS = 2;
+       NUM_COLS = 4;
+       flowerIndex = 0;
+       let div = document.getElementById("flowersDiv");
+       let table = document.createElement("table");
+       div.appendChild(table);
+       for(let i=0; i<NUM_ROWS;i++) {
+           let tr = document.createElement("tr");
+           table.appendChild(tr);
+           for(let j=0;j<NUM_COLS;j++) {
+               let flower = document.createElement("div");
+               let flowerImg = document.createElement("img")
+               flowerImg.src = "images/" + flowers[flowerIndex].picture;
+               flower.appendChild(flowerImg);
+               let caption = flowers[flowerIndex].name;
+               let p = document.createElement("p");
+               p.innerHTML = caption;
+               flower.appendChild(p);
+               let td = document.createElement("td");
+               td.appendChild(flower);
+               tr.appendChild(td);
+               flowerIndex+=1;
+           }
+           table.appendChild(tr);
+       }
     </script>
 </body>
 </html>
