--- a/practicum/week-4/question2.html
+++ b/practicum/week-4/question2.html
@@ -83,8 +83,8 @@
         }
         let daffodil = new Flower('Daffodil', 'daffodil.png');
         let cherryblossom = new Flower('Cherry blossom', 'cherryblossom.png');
-        let lily = new Flower('Lily', 'lily.png');
-        let daisy = new Flower('Daisy', 'daisy.png');
+        let lily = new Flower('Lily', 'lily.jpg');
+        let daisy = new Flower('Daisy', 'daisy.jpg');
         let sunflower = new Flower('Sunflower', 'sunflower.png');
         let tulip = new Flower('Tulip', 'tulip.png');
         let rose = new Flower('Rose', 'rose.png');
@@ -100,6 +100,109 @@
             rose,
             waterlily
         ];
+
+        const div = document.getElementById("flowersDiv");
+        console.log("START")
+        function myCompare(a, b) {
+            if(a.name === b.name) {
+                return 0;
+            } else if(a.name > b.name) {
+                return 1;
+            } else {
+                return -1;
+            }
+        }
+        console.log("post myCmp")
+
+        function isSorted(flowers) {
+            for(let i = 0; i<flower.length-1;i++) {
+                let first = flowers[i];
+                let sec = flowers[i+1];
+                if(!(first.name > sec.name)) {
+                    return false;
+                }
+            }
+            return true;
+        }
+        console.log("post is sorted")
+
+        function indexOf(flowerName, flowers) {
+            let flowerIndex = 0;
+            for(let i=0; i<flowers.length;i++) {
+                let currFlower = flowers[i];
+                if(currFlower.name === flowerName) {
+                    flowerIndex = i;
+                    break;
+                } else {
+                    flowerIndex = -1;
+                }
+            }
+            return flowerIndex;
+        }
+        console.log("post indexOf")
+
+        function buildTable(flowers) {
+            NUM_ROWS = 2;
+            NUM_COLS = 4;
+            flowerIndex = 0;
+            var table = document.createElement("table");
+            for(let i=0; i<NUM_ROWS;i++) {
+                var tr = document.createElement("tr");
+                table.appendChild(tr);
+                for(let j=0;j<NUM_COLS;j++) {
+                    let flower = document.createElement("div");
+                    flower.setAttribute("class", "flower")
+                    let flowerImg = document.createElement("img")
+                    flowerImg.src = "images/" + flowers[flowerIndex].picture;
+                    flower.appendChild(flowerImg);
+                    let caption = flowers[flowerIndex].name;
+                    let p = document.createElement("p");
+                    p.innerHTML = caption;
+                    flower.appendChild(p);
+                    let td = document.createElement("td");
+                    td.appendChild(flower);
+                    tr.appendChild(td);
+                    flowerIndex+=1;
+                }
+                table.appendChild(tr);
+           }
+           return table;
+        }
+        console.log("post buildTable")
+
+        function insertTable(table) {
+            div.appendChild(table);
+       }
+       console.log("post insertTable")
+
+
+        function addListener(table) {
+            table.addEventListener("click", function(event) {
+            div.innerHTML = "";
+            var clickedCell = event.target;
+            let tagName = clickedCell.tagName.toLowerCase();
+            if(tagName === "img" || tagName === "td") {
+                var parent = clickedCell.parentNode;
+            } if(parent) {
+                var pTag = parent.getElementsByTagName("p")[0];
+                var flowerName = pTag.innerText;
+            }
+            flowers.sort(myCompare);
+            let clickedIndex = indexOf(flowerName, flowers);
+            let arrayFront = flowers.splice(clickedIndex);
+            flowers = arrayFront.concat(flowers);
+            table = buildTable(flowers);
+            insertTable(table);
+        });
+        console.log("post addListener")
+        }
+        table = buildTable(flowers)
+        console.log("post buildTable")
+        insertTable(table);
+        console.log("post inserTable")
+        table = div.getElementsByTagName("table")[0];
+        console.log(table)
+        div.addEventListener("click", addListener(table));
     </script>
 </body>
 
