--- a/practicum/week-4/question2.html
+++ b/practicum/week-4/question2.html
@@ -171,8 +171,7 @@
         function insertTable(table) {
             div.appendChild(table);
        }
-       console.log("post insertTable")
-        }
+       console.log("post insertTable");
         var table = document.createElement("table");
         buildTable(flowers, table)
         console.log("post buildTable")
