--- a/practicum/week-5/index.html
+++ b/practicum/week-5/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--DO NOT CHANGE THE FOLLOWING LINES !!!-->
     <link rel="stylesheet" href="styles.css">
-    <script src="https://habahram.github.io/ISTA330/practicum/week-5/tests.js" type="text/javascript"></script>
+    <script src="https://righteousriley.github.io/ISTA330/practicum/week-5/index.html/tests.js" type="text/javascript"></script>
     <title>Document</title>
 </head>
 
