--- a/practicum/week-7/index.html
+++ b/practicum/week-7/index.html
@@ -26,7 +26,7 @@
             </ol>
            </li>
            <li>
-            Then deploy your REST API to Heroku. You should follow the follwoing naming concention for
+            Then deploy your REST API to Heroku. You should follow the follwoing naming convention for
              your Heroku deployment: the name of your Heroku application should be "yourgithubusername-imagequiz.herokuapp.com". 
            </li>
            <li>
